# quark-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE.md  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-04-quark-cli-product-release.md
libquarkpan/src/: api.rs  error.rs  lib.rs  transfer.rs
quarkcli/: Cargo.toml  README.md
quarkcli/src/: main.rs  shell.rs
quarkpan/: Cargo.toml  README.md
quarkpan/src/: main.rs  shell.rs
