[workspace]
members = [
    "libquarkpan",
    "quarkcli",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
homepage = "https://github.com/i-sync/quark-cli"
repository = "https://github.com/i-sync/quark-cli"

[workspace.dependencies]
libquarkpan = { version = "0.4.0", path = "libquarkpan", default-features = false }
